2014-08-19 Nelson Gonzalez <nigm2005@gmail.com>

	* (PFilter) Added augmented particle filter
	
	* (Flag) added default error to measures of
	0.1
	
	* (Self) tuned particle filter localization

2014-08-08 Nelson Gonzalez <nigm2005@gmail.com>

	* (GAlgorithm) added new method to the genetic
	algorithms toolkit to load populations from a text
	file.
	* (GAlgorithm) fixed the generations of ones mask in
	variables
	
	* (Makefile) changed libraries order links in order to
	support linux

2014-08-04 Nelson Gonzalez <nigm2005@gmail.com>

	* (World) fixed memory when the player is using a
	head angle different to 0

2014-08-02 Nelson Gonzalez <nigm2005@gmail.com>

	* (GAlgorithm) added support library for genetic
	algorithms
	
	* (main) removed warnings

2014-07-30 Nelson Gonzalez <nigm2005@gmail.com>

	* (Parser) added an offset to the see handler
	
	* (Fuzzy) added support libraries for fuzzy logic

2014-07-29 Nelson Gonzalez <nigm2005@gmail.com>

	* (Math) added base structure Function to Math namespace.
	All the math function inherits from Function.
	* (Inverse) now the Inverse function accepts a y offset
	denoted by c

2014-07-24 Nelson Gonzalez <nigm2005@gmail.com>

	* (Parser) fixed stream open in linux
	* (Commands) fixed stream open in linux

2014-07-23 Nelson Gonzalez <nigm2005@gmail.com>

	* (PField) Added vector header to class.
	
	* (World) Added matching algorithm, and particle filters
	to track players

2014-07-18 Nelson Gonzalez <nigm2005@gmail.com>

	* (Configs) now the save sensors and commands options are 
	read from the team config file.
	* (Parser) the sensors and commands file logs have the
	format name <TEAM_NAME>_<UNIFORM_NUMBER>_<SENSOR>.log
	
	* (Player) when velocity data is received in the see sensor,
	the player velocity is truncated to PLAYER_SPEED_MAX after it
	is computed

2014-07-17 Nelson Gonzalez <nigm2005@gmail.com>

	* (Player) method initForPlayer splitted in setDataForPlayer
	to pass the war data to the object and then InitForPlayer