@@ -1,3 +1,8 @@
 wait 10
+do 30
 change_to play_on
-wait 500
+wait 2000
+change_to before_kick_off
+recover
+wait 10
+end_do
