@@ -3,5 +3,6 @@ do 30
 change_to play_on
 wait 2000
 change_to before_kick_off
+recover
 wait 10
 end_do
